replace automotive color with teal
ready
#96

--- a/deploy/htdocs/version/src/inc/style/utility/_variables.scss
+++ b/deploy/htdocs/version/src/inc/style/utility/_variables.scss
@@ -41,7 +41,7 @@ $colorTertiary: #009e8c;
 $colorQuaternary: #818285;
 $colorQuinary: #0077bc;
 
-$colorAutomotive: #808285;
+$colorAutomotive: #009E8C;
 $colorLocalMedia: #00629b;
 $colorSmallBusinesses: #faa41a;
 $colorEnterprise: #500778;
