Add custom video controls to the video player on desktop Hide the controls after mouse inactivity or video player mouse leave Close the video when the user hits the escape key Close the video when the video ends Moved the cross closer to the video player
ready
#107

--- a/deploy/htdocs/version/src/inc/script/app/component/video-player/video-player.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/video-player/video-player.html
@@ -1,3 +1,9 @@
-<div class="component-video-player" data-bind="with: data">
-
+<div class="component-video-player" data-bind="events: [
+	[MouseEventHelper.MOUSEMOVE, $root.handleMouseMove.bind($root)],
+	[MouseEventHelper.MOUSELEAVE, $root.handleMouseLeave.bind($root)]
+]">
+	<!-- ko component: {
+		name: 'video-controls',
+		onComplete: $root.controller.handleVideoControlsReady.bind($root.controller)
+	} --><!-- /ko-->
 </div>
