--- a/deploy/htdocs/version/src/inc/style/component/_video-player.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_video-player.scss
@@ -9,4 +9,10 @@
 		position: absolute;
 		object-fit: cover;
 	}
+
+	.component-video-controls {
+		@include pos(auto, 0, 0, 0);
+		position: absolute;
+		z-index: 1;
+	}
 }
