Refactored the path to purchase to match the new slide out design, also implemented fixes for smaller screens
ready
#83

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
@@ -13,25 +13,23 @@
 		</div>
 		<!-- /ko -->
 
-		<div class="slide-details" data-bind="foreach:data.steps">
-			<div class="slide-detail">
-				<h2 class="heading heading-07" data-bind="html: secondaryHeading"></h2>
-				<p class="copy copy-01" data-bind="html: secondaryParagraph"></p>
-			</div>
-		</div>
-
-
 		<div class="slider-viewport infinite-carousel js-image-carousel">
 			<ul class="steps site-frame js-slides" data-bind="foreach: data.steps">
-				<li class="step js-slide" data-bind="css: {'is-active': $root.activeIndex() === $index()}, events: [
+				<li class="step-wrapper js-slide" data-bind="css: {'is-active': $root.activeIndex() === $index()}, events: [
 						[$root.MouseEventHelper.CLICK, $root.handleClick.bind($root, $index())]
 				]">
-					<div class="step-content">
-						<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($index() + 1).toString(), 2, '0')"></span>
-						<h2 class="copy copy-02" data-bind="html: heading"></h2>
-						<p class="copy copy-01" data-bind="html: paragraph"></p>
+					<div class="step">
+						<div class="step-content">
+							<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($index() + 1).toString(), 2, '0')"></span>
+							<h2 class="heading heading-07" data-bind="html: heading"></h2>
+							<p class="copy copy-01" data-bind="html: paragraph"></p>
+
+							<div class="secondary-content">
+								<p class="copy copy-01" data-bind="html: secondaryParagraph"></p>
+							</div>
+						</div>
+						<div class="step-edge"></div>
 					</div>
-					<div class="step-edge"></div>
 				</li>
 			</ul>
 		</div>
