--- a/deploy/htdocs/version/src/inc/style/component/button/_button-circle-icon.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-circle-icon.scss
@@ -9,4 +9,8 @@
 		color: $colorPrimary;
 		transition: color 250ms ease(linear);
 	}
+
+	@include respond-to(LARGE) {
+		@include size($sizeGrid);
+	}
 }
