Fixed responsiveness of the 404 page

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
@@ -18,5 +18,5 @@
 			} --><!-- /ko -->
 		<!-- /ko -->
 	</div>
-	<div class="error-code" data-bind="html: data.errorCode"></div>
+	<div class="error-code abs-center" data-bind="html: data.errorCode"></div>
 </div>
