Fixed not found page Fixed background issue on the hero main

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
@@ -1,6 +1,6 @@
 <div class="component-block-page-not-found">
 	<div class="background abs-fill bg-cover" data-bind="image: {
-				image: data.background,
+				image: data.image,
 				state: $root.deviceState()
 			}"></div>
 	<div class="message abs-center">
