Update the hero main block so it knows how to handle internal video files
ready
#106

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
@@ -24,6 +24,16 @@
 	}
 
 	// Breakpoints
+	@include respond-to(LARGE) {
+		.content-items {
+			justify-content: center;
+
+			.component-block-info {
+				margin-left: auto;
+			}
+		}
+	}
+
 	@include respond-to(SMALL) {
 		.load-more-button-wrapper {
 			padding-left: $sizeGrid;
