--- a/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
@@ -18,7 +18,8 @@
 		}
 	}
 
-	@include respond-to(MEDIUM) {
+
+	@include respond-to(LARGE) {
 		.site-frame {
 			padding-left: $sizeGrid;
 			padding-right: $sizeGrid;
