--- a/deploy/htdocs/version/src/inc/style/component/block/_block-more.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-more.scss
@@ -33,6 +33,12 @@
 		}
 	}
 
+	@include respond-to(LARGE) {
+		.latest-articles {
+			justify-content: center;
+		}
+	}
+
 	@include respond-to(SMALL) {
 
 		.latest-articles {
