Add video support to the hero tertiary

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-tertiary/block-hero-tertiary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-tertiary/block-hero-tertiary.html
@@ -1,7 +1,6 @@
 <div class="component-block-hero-tertiary">
-	<img data-bind="
-			image: {
-				image: data.background,
-				state: $root.deviceState()
-			}" />
+	<!-- ko component: {
+		name: 'image-crossfader',
+		onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller))
+	} --><!-- /ko -->
 </div>
