--- a/deploy/htdocs/version/src/inc/style/component/button/_button-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-main.scss
@@ -47,7 +47,7 @@
 		color: $colorWhite;
 
 		.stripe {
-			background: #000;
+			background: $colorWhite;
 		}
 
 		rect {
@@ -56,7 +56,7 @@
 			}
 
 			&.hover-stroke {
-				stroke: #000;
+				stroke: $colorWhite
 			}
 		}
 	}
