Open phone on header click Applied theme to the call button on the header Show first 2 items on the more and latest block

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -22,7 +22,7 @@
 				action: {
 					label: dataManager.settingsModel.initDataModel.contactOptions.phone.phoneNumber,
 					title: dataManager.settingsModel.initDataModel.contactOptions.phone.phoneNumber,
-					event: function(){console.log('call us')}
+					event: $root.handleCallClick.bind($root)
 				},
 				size: $root.ButtonSize.LARGE,
 				disabled: $root.callButtonDisabled
