--- a/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
@@ -37,7 +37,7 @@
 			padding-left: $sizeGrid;
 			padding-right: $sizeGrid;
 
-			.component-block-article-teaser:not(:first-child) {
+			.component-block-article-teaser:not(:nth-child(-n+2) ) {
 				display: none;
 			}
 
