Increased spacing on the article teaser blocks
ready
#144

--- a/deploy/htdocs/version/src/inc/style/layout/_site-frame.scss
+++ b/deploy/htdocs/version/src/inc/style/layout/_site-frame.scss
@@ -18,8 +18,7 @@
 	&.windowed {
 		padding: 0 $sizeGrid * 2;
 	}
-
-	@include respond-to(LARGE) {
+	@include respond-to(X_LARGE){
 		max-width: calc(100vw - #{$sizeGrid * 2});
 	}
 
