Disable hover state when transition is not yet complete Move up content to make room for extra content on tablets

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-call-to-actions/block-image-call-to-actions.html
@@ -1,4 +1,4 @@
-<div class="component-block-image-call-to-actions" data-bind="css: {'windowed': data.windowed}">
+<div class="component-block-image-call-to-actions" data-bind="css: {'windowed': data.windowed, 'transition-in-complete': $root.transitionInComplete()}">
 	<div class="call-to-actions-wrapper abs-fill">
 		<div class="call-to-actions-images abs-fill" data-bind="foreach: data.callToActions">
 			<div class="call-to-action-image abs-fill" data-bind="css: {
