--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-call-to-actions.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-call-to-actions.scss
@@ -12,13 +12,6 @@
 			color: $colorPrimary;
 			height: 100%;
 			display: inline-block;
-
-			@include hover() {
-				.copy {
-					opacity: 1;
-					transform: translateY(0);
-				}
-			}
 		}
 
 		.heading {
@@ -69,6 +62,28 @@
 			.blurred-image {
 				opacity: 1;
 			}
+		}
+	}
+
+	&.transition-in-complete {
+		.call-to-actions-content {
+			font-size: 0;
+
+			a {
+				@include hover() {
+					.copy {
+						opacity: 1;
+						transform: translateY(0);
+					}
+				}
+			}
+		}
+	}
+
+	@include respond-to(MEDIUM){
+		.text-wrapper {
+			top: $sizeGridSecondary;
+			padding: 0 $sizeGridSecondary;
 		}
 	}
 
