--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-story-info-images/block-story-info-images.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-story-info-images/block-story-info-images.html
@@ -19,16 +19,18 @@
 			</div>
 		</div>
 		<div class="story-content" data-bind="foreach: data.stories">
-			<article class="story" data-bind="
-			css: {
-				'is-active': $index() === $root.activeStory()
-			},
-			events: [
-				[$root.MouseEventHelper.MOUSEENTER, $root.handleMouseEnter.bind($root, $index())]
-			]">
-				<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($index() + 1).toString(), 2, '0')"></span>
-				<h2 class="heading heading-06" data-bind="html: heading"></h2>
-				<p class="copy copy-01" data-bind="html: paragraph"></p>
+			<article data-bind="
+				css: {
+					'is-active': $index() === $root.activeStory()
+				},
+				events: [
+					[$root.MouseEventHelper.MOUSEENTER, $root.handleMouseEnter.bind($root, $index())]
+				]" class="story">
+				<div class="theme" data-bind="css: $root.ThemeHelper.getTheme($data.theme)">
+					<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft(($index() + 1).toString(), 2, '0')"></span>
+					<h2 class="heading heading-06" data-bind="html: heading"></h2>
+					<p class="copy copy-01" data-bind="html: paragraph"></p>
+				</div>
 			</article>
 		</div>
 	</div>
