--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -1,8 +1,4 @@
-<header class="component-header" data-bind="css: {
-	'enable-solid-background': $root.enableSolidBackground,
-	'theme-light': dataManager.headerTheme() === $root.Theme.LIGHT,
-	'theme-dark': dataManager.headerTheme() === $root.Theme.DARK
-}">
+<header class="component-header" data-bind="css: $root.classNames()">
 
 	<h1 class="logo" data-bind="
 		gaiaGoto: [Branches.CONTENT_PAGE, 'home'],
