--- a/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
@@ -57,7 +57,7 @@
 		</ul>
 
 		<button class="filter-label button"
-		        data-bind="css: {'is-disabled': !$root.filterChanged()}, tap: ($root.filterChanged() ? $root.applyFilter.bind($root) : null)">
+		        data-bind="css: {'is-disabled': !$root.filterChanged()}, tap: ($root.filterChanged() ? $root.applyFilter.bind($root) : $root.handleFilterClick.bind($root))">
 
 			<!-- ko ifnot: $root.filterChanged() -->
 				<!-- ko text: label --><!-- /ko -->
